# humanenv

./: .dockerignore  .env.example  .gitignore  .manage-proxy-file-staging.yml  .npmignore  Dockerfile  README.md  compose.prod.yml  docker-compose.server.mongo.yml  docker-compose.server.yml  manage.js  package.json  plan.txt  tsconfig.json
.agents/skills/humanenv-sdk-python-usage/: SKILL.md
docs/: AGENTS_FRIENDLY_TOOLS.md  DOCKER.md  changelog-2026-04-product.md  changelog-2026-04.html  changelog.html  deployment-guidelines.md  index.html  review.md  test-plan.md
docs/todo/: reset-db-plan.md
examples/external-cli-example/: README.md  index.js  package.json
scripts/: mongo-pk.d.ts  mongo-pk.js  mongo-pk.ts  pk-generate.d.ts  pk-generate.js  pk-generate.ts  sqlite-reset.d.ts  sqlite-reset.js  sqlite-reset.ts
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/humanenv/: AGENTS.md  __init__.py  client.py  errors.py  fingerprint.py
