[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "humanenv"
version = "0.1.0"
description = "Python SDK for humanenv secrets management"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "humanenv team"}]
classifiers = ["License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12"]
dependencies = ["websockets>=12.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
